<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <Button
        android:id="@+id/check_profit_amazon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_price" />

    <Button
        android:id="@+id/trans_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_file_title" />

    <Button
        android:id="@+id/fba_shipping_rec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_receive" />

    <Button
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/product_list" />

</LinearLayout>
